--- a/covid/assets/style/contact.css
+++ b/covid/assets/style/contact.css
@@ -85,10 +85,9 @@
   width: 795px;
 }
 .header .header__navigation .navigation__list .list__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 18px;
   color: #000;
 }
@@ -134,22 +133,23 @@
 .contact-preview .contact-preview__subtitle {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   color: #FFFFFF;
+  text-transform: uppercase;
 }
 .contact-preview .contact-preview__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 40px;
-  line-height: 49px;
+  font-size: 30px;
+  line-height: 34px;
   color: #FFFFFF;
-  margin-top: 30px;
+  margin-bottom: 15px;
 }
 .contact-preview .contact-preview__text {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   margin-top: 25px;
@@ -161,7 +161,7 @@
   padding: 21px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #fff;
   cursor: pointer;
@@ -184,7 +184,7 @@
 .contact-preview .form-consultation__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 24px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -193,7 +193,7 @@
 .contact-preview .form-consultation__subtitle {
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 22px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -201,7 +201,7 @@
 .contact-preview .form-consultation__description {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #E3E1E1;
@@ -220,7 +220,7 @@
 .contact-preview .form-consultation__input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
@@ -247,7 +247,7 @@
   padding: 16px 12px 12px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   -webkit-appearance: none;
@@ -263,7 +263,7 @@
   margin-top: 28px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   transition: 0.3s;
@@ -277,9 +277,10 @@
   padding: 50px 0;
 }
 .defense .defense__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-size: 24px;
   line-height: 37px;
   /* identical to box height */
   text-align: center;
@@ -287,9 +288,10 @@
   margin-bottom: 25px;
 }
 .defense .defense__description {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: #000;
@@ -312,7 +314,7 @@
 .stop-waiting .stop-waiting__subtitle {
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   color: #000000;
   text-transform: uppercase;
@@ -320,7 +322,7 @@
 .stop-waiting .stop-waiting__title {
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
+  font-size: 24px;
   line-height: 37px;
   color: #000000;
   text-transform: uppercase;
@@ -331,10 +333,12 @@
   color: #4C957A;
 }
 .stop-waiting p {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 24px;
+  color: #000;
   color: #000000;
 }
 .stop-waiting p span {
@@ -353,13 +357,13 @@
 .stop-waiting .stop-waiting__content .contact-us {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   background: #6CD3AE;
   border-radius: 10px;
   border: none;
-  padding: 21px 41px;
+  padding: 18px 41px;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -390,7 +394,7 @@
   margin-bottom: 34px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
   color: rgba(129, 129, 129, 0.7);
@@ -398,7 +402,7 @@
 .map .map__content .map__form .map__input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
   color: rgba(129, 129, 129, 0.7);
@@ -412,7 +416,7 @@
   margin-bottom: 34px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
   color: rgba(129, 129, 129, 0.7);
@@ -432,7 +436,7 @@
 .map .map__content .map__form .message::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
   color: rgba(129, 129, 129, 0.7);
@@ -441,7 +445,7 @@
   margin-top: 34px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   padding: 21px 43px;
@@ -456,7 +460,17 @@
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 100px 0 20px;
+  position: relative;
+}
+.footer::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background: #4C957A;
+  top: 101px;
+  left: 0;
 }
 .footer .logo {
   max-width: 134px;
@@ -470,40 +484,12 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
   color: #000000;
-}
-.footer .footer__register {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 62px;
-  border-bottom: 2px solid #4C957A;
-}
-.footer .footer__register .input__join {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 20px;
-  color: rgba(88, 88, 88, 0.7);
-  border: none;
-  background: rgba(196, 196, 196, 0.7);
-  border-radius: 10px;
-  width: 407px;
-}
-.footer .footer__register .input__join::placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu {
   display: flex;
   justify-content: space-between;
   position: relative;
-  border-top: 2px solid #4C957A;
   padding-top: 34px;
 }
 .footer .footer__menu form {
@@ -1009,6 +995,9 @@
 
   .footer {
     padding: 30px 0;
+  }
+  .footer::after {
+    top: 30px;
   }
   .footer .social {
     order: 4;
