--- a/covid/assets/style/foreclasure.css
+++ b/covid/assets/style/foreclasure.css
@@ -89,10 +89,10 @@ html {
   width: 795px;
 }
 .header .header__navigation .navigation__list .list__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 18px;
   color: #000;
 }
@@ -136,24 +136,26 @@ html {
   max-width: 702px;
 }
 .foreclosure-preview .foreclosure-preview__subtitle {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 18px;
   color: #FFFFFF;
 }
 .foreclosure-preview .foreclosure-preview__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 40px;
-  line-height: 49px;
+  font-size: 30px;
+  line-height: 35px;
   color: #FFFFFF;
   margin-top: 30px;
 }
 .foreclosure-preview .foreclosure-preview__text {
+  font-family: "Nunito", sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   margin-top: 25px;
@@ -171,7 +173,7 @@ html {
 .foreclosure-preview .form-consultation__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 24px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -180,7 +182,7 @@ html {
 .foreclosure-preview .form-consultation__subtitle {
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 22px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -188,7 +190,7 @@ html {
 .foreclosure-preview .form-consultation__description {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #E3E1E1;
@@ -207,7 +209,7 @@ html {
 .foreclosure-preview .form-consultation__input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
@@ -233,7 +235,7 @@ html {
   padding: 16px 12px 12px !important;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   position: relative;
@@ -243,6 +245,7 @@ html {
   width: 100%;
 }
 .foreclosure-preview .form-consultation__button {
+  font-family: "Nunito", sans-serif;
   background: #76ECC1;
   border-radius: 10px;
   padding: 21px 140px;
@@ -251,7 +254,7 @@ html {
   cursor: pointer;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   transition: all 0.3s;
@@ -264,9 +267,10 @@ html {
   padding: 50px 0;
 }
 .second-block .second-block__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-size: 24px;
   line-height: 37px;
   /* identical to box height */
   text-align: center;
@@ -274,9 +278,10 @@ html {
   margin-bottom: 25px;
 }
 .second-block .second-block__description {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: #000;
@@ -288,16 +293,18 @@ html {
 .how-it-works .how-it-works__subtitle {
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #000000;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 .how-it-works .how-it-works__title {
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
   line-height: 37px;
   color: #000000;
   margin-bottom: 33px;
@@ -308,17 +315,18 @@ html {
   position: relative;
 }
 .how-it-works .process .process__title {
-  font-style: normal;
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 24px;
+  line-height: 27px;
   text-align: right;
   color: #000000;
 }
 .how-it-works .process .process__description {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  text-align: center;
+  font-size: 15px;
   line-height: 24px;
   text-align: right;
   color: #000000;
@@ -351,7 +359,7 @@ html {
   position: absolute;
   font-style: normal;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 43px;
   color: #FFFFFF;
   padding: 20px 35px;
@@ -370,7 +378,7 @@ html {
   position: absolute;
   font-style: normal;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 43px;
   color: #FFFFFF;
   padding: 20px 35px;
@@ -421,7 +429,7 @@ html {
   position: absolute;
   font-style: normal;
   font-weight: 500;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 43px;
   color: #FFFFFF;
   padding: 20px 32px;
@@ -446,31 +454,37 @@ html {
   text-align: center;
 }
 .consult .consult__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 24px;
   line-height: 37px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
 }
 .consult .consult__description {
+  font-family: "Nunito", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .consult .schedule-button {
   border: none;
   background: #6CD3AE;
   border-radius: 10px;
-  padding: 21px;
+  padding: 18px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: #fff;
   cursor: pointer;
@@ -481,7 +495,17 @@ html {
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 100px 0 20px;
+  position: relative;
+}
+.footer::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background: #4C957A;
+  top: 101px;
+  left: 0;
 }
 .footer .logo {
   max-width: 134px;
@@ -495,40 +519,12 @@ html {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
   color: #000000;
-}
-.footer .footer__register {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 62px;
-  border-bottom: 2px solid #4C957A;
-}
-.footer .footer__register .input__join {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 20px;
-  color: rgba(88, 88, 88, 0.7);
-  border: none;
-  background: rgba(196, 196, 196, 0.7);
-  border-radius: 10px;
-  width: 407px;
-}
-.footer .footer__register .input__join::placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu {
   display: flex;
   justify-content: space-between;
   position: relative;
-  border-top: 2px solid #4C957A;
   padding-top: 34px;
 }
 .footer .footer__menu form {
@@ -1009,6 +1005,9 @@ html {
 
   .footer {
     padding: 30px 0;
+  }
+  .footer::after {
+    top: 30px;
   }
   .footer .social {
     order: 4;
