--- a/covid/assets/style/login.css
+++ b/covid/assets/style/login.css
@@ -90,10 +90,9 @@ html {
   width: 795px;
 }
 .header .header__navigation .navigation__list .list__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 18px;
   color: #000;
 }
@@ -121,7 +120,7 @@ html {
 .login .login__title {
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
+  font-size: 24px;
   line-height: 37px;
   color: #000000;
   text-align: center;
@@ -138,7 +137,7 @@ html {
   box-sizing: border-box;
   border-radius: 10px;
   border: 2px solid #868686;
-  font-size: 22px;
+  font-size: 18px;
   width: 100%;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
@@ -148,7 +147,7 @@ html {
   text-align: left;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   font-family: "Montserrat", sans-serif;
@@ -162,14 +161,14 @@ html {
 .login .login__form div a {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: rgba(0, 0, 0, 0.7);
 }
 .login .login__form .sing-in {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   background: #6CD3AE;
@@ -182,13 +181,23 @@ html {
 .login .register {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: #000000;
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 100px 0 20px;
+  position: relative;
+}
+.footer::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background: #4C957A;
+  top: 101px;
+  left: 0;
 }
 .footer .logo {
   max-width: 134px;
@@ -202,40 +211,12 @@ html {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
   color: #000000;
-}
-.footer .footer__register {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 62px;
-  border-bottom: 2px solid #4C957A;
-}
-.footer .footer__register .input__join {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 20px;
-  color: rgba(88, 88, 88, 0.7);
-  border: none;
-  background: rgba(196, 196, 196, 0.7);
-  border-radius: 10px;
-  width: 407px;
-}
-.footer .footer__register .input__join::placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu {
   display: flex;
   justify-content: space-between;
   position: relative;
-  border-top: 2px solid #4C957A;
   padding-top: 34px;
 }
 .footer .footer__menu form {
@@ -560,6 +541,9 @@ html {
 
   .footer {
     padding: 30px 0;
+  }
+  .footer::after {
+    top: 30px;
   }
   .footer .social {
     order: 4;
