--- a/covid/assets/style/shortSale.scss
+++ b/covid/assets/style/shortSale.scss
@@ -92,10 +92,9 @@ html {
             width: 795px;
 
             .list__link {
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-style: normal;
-                font-weight: 500;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 18px;
                 color: $color-text;
             }
@@ -159,8 +158,8 @@ html {
     .foreclosure-preview__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 40px;
-        line-height: 49px;
+        font-size: 28px;
+        line-height: 37px;
         color: #FFFFFF;
         margin-top: 30px;
     }
@@ -168,7 +167,7 @@ html {
     .foreclosure-preview__text {
         font-style: normal;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         margin-top: 25px;
@@ -188,7 +187,7 @@ html {
     .form-consultation__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 24px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -206,7 +205,7 @@ html {
     .form-consultation__subtitle  {
         font-style: normal;
         font-weight: 500;
-        font-size: 25px;
+        font-size: 22px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -215,7 +214,7 @@ html {
     .form-consultation__description {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #E3E1E1;
@@ -235,7 +234,7 @@ html {
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -251,7 +250,7 @@ html {
         padding: 16px 12px 12px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
@@ -287,7 +286,7 @@ html {
         cursor:pointer;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
 
@@ -309,14 +308,14 @@ html {
         padding: 16px 12px 12px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         color: rgba(129, 129, 129, 0.7);
         text-transform: capitalize;
         resize: none;
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -327,20 +326,13 @@ html {
 .home-defenders {
     padding: 50px 0;
 
-    .home-defenders__subtitle {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 15px;
-        line-height: 18px;
-        text-align: center;
-        color: #000000;
-        margin-bottom: 30px;
-    }
+    
 
     .home-defenders__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-size: 24px;
         line-height: 37px;
         /* identical to box height */
         text-align: center;
@@ -349,9 +341,10 @@ html {
     }
 
     .home-defenders__description {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
         text-align: center;
         color: $color-text;
@@ -365,20 +358,22 @@ html {
     .how-it-works__subtitle {
         font-style: normal;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #000000;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
     }
 
     .how-it-works__title {
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
         line-height: 37px;
         color: #000000;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         text-align: center;
     }
 
@@ -392,9 +387,9 @@ html {
             position: absolute;
             top: -23px;
             left: 25px;
-            border: 5px solid #fff;
-            font-style: normal;
-            font-weight: 500;
+            border: 3px solid #fff;
+            font-family: 'Nunito', sans-serif;
+            font-weight: 300;
             font-size: 20px;
             line-height: 24px;
             color: #FFFFFF;
@@ -408,9 +403,9 @@ html {
             position: absolute;
             top: -23px;
             left: 25px;
-            border: 5px solid #fff;
-            font-style: normal;
-            font-weight: 500;
+            border: 3px solid #fff;
+            font-family: 'Nunito', sans-serif;
+            font-weight: 300;
             font-size: 20px;
             line-height: 24px;
             color: #FFFFFF;
@@ -422,11 +417,11 @@ html {
         .step:last-child .step__content::after {
             content:"Step 3";
             position: absolute;
-            border: 5px solid #fff;
+            border: 3px solid #fff;
             top: -23px;
             left: 25px;
-            font-style: normal;
-            font-weight: 500;
+            font-family: 'Nunito', sans-serif;
+            font-weight: 300;
             font-size: 20px;
             line-height: 24px;
             color: #FFFFFF;
@@ -437,9 +432,7 @@ html {
     }
     .step {
         flex-basis: 30%;
-        
-
-        
+        background: #fff;
     }
 
     .step__img {
@@ -453,38 +446,42 @@ html {
     }
 
     .step__content {
-        background: #fff;
-        padding: 45px 30px;
+        padding: 30px;
         position: relative;
-        min-height: 635px;
 
         .step__title {
+            font-family: 'Roboto', sans-serif;
             font-weight: bold;
-            font-size: 25px;
-            line-height: 30px;
+            font-size: 24px;
+            line-height: 27px;
+            margin-bottom: 10px;
+            text-align: center;
             color: #000000;
         }
 
         .step__description {
             font-style: normal;
             font-weight: normal;
-            font-size: 20px;
+            text-align: center;
+            font-size: 15px;
             line-height: 24px;
             color: #000000;
         }
     }
 }
 .consult {
-    padding: 63px 0;
+    padding: 50px 0;
     background: url('../img/consult__bg.png') no-repeat;
     background-position: center;
     .consult__content {
         text-align: center;
     }
     .consult__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 24px;
         line-height: 37px;
         text-align: center;
         color: #FFFFFF;
@@ -492,22 +489,26 @@ html {
     }
 
     .consult__description {
+        font-family: 'Nunito', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 18px;
         line-height: 24px;
         text-align: center;
         color: #FFFFFF;
         margin-bottom: 25px;
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .schedule-button {
         border: none;
         background: #6CD3AE;
         border-radius: 10px;
-        padding: 21px;
+        padding: 18px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 24px;
         color: #fff;
         cursor: pointer;
@@ -520,11 +521,24 @@ html {
 }
 
 .footer {
-    padding: 20px 0;
+
+    padding: 100px 0 20px;
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        height: 1px;
+        background: #4C957A;
+        top: 101px;
+        left: 0;
+    }
 
     .logo {
         max-width: 134px;
     }
+
     .block-logo{
         margin-top: 18px;
         display: flex;
@@ -534,44 +548,12 @@ html {
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
-        /* identical to box height */
-
-
-color: #000000;
-    }
-    .footer__register {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom:62px ;
-        border-bottom: 2px solid #4C957A;
-        .input__join {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 24px;
-            padding: 20px;
-            color: rgba(88, 88, 88, 0.7);
-            border: none;
-            background: rgba(196, 196, 196, 0.7);
-            border-radius: 10px;
-            width: 407px;
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(88, 88, 88, 0.7);
-                
-            }
-        }
+        color: #000000;
     }
     .footer__menu {
         display: flex;
         justify-content: space-between;
         position: relative;
-        border-top: 2px solid #4C957A;
         padding-top: 34px;
 
         form {
@@ -715,7 +697,6 @@ color: #000000;
         .steps-help {
             .step {
                 .step__content {
-                    min-height: 432px;
                 }
             }
         }
@@ -738,7 +719,6 @@ color: #000000;
                 }
 
                 .step__content {
-                    min-height: 355px;
                 }
 
                 .step__img{
@@ -753,7 +733,6 @@ color: #000000;
 
         .step__content {
             padding: 30px 10px;
-            min-height: 10px;
 
             .step__title {
                 font-size: 18px;
@@ -789,7 +768,6 @@ color: #000000;
                 }
 
                 .step__content{
-                    min-height: 432px;
                 }
     
             }
@@ -803,7 +781,6 @@ color: #000000;
         .steps-help {
             .step {
                 .step__content {
-                    min-height: 455px;
                 }
             }
         }
@@ -919,7 +896,6 @@ color: #000000;
         .step__content 
         {
             padding: 30px 10px;
-            min-height: 10px;
             .step__title {
                 font-size: 18px;
                 text-align: center;
@@ -1249,7 +1225,6 @@ color: #000000;
 
                     .step__content {
                         padding: 20px 5px;
-                        min-height: 10px;
 
                         .step__title{
                             font-size: 18px;
@@ -1270,7 +1245,9 @@ color: #000000;
 
     .footer {
         padding: 30px 0;
-        
+        &::after {
+            top: 30px;
+        }
 
         
         .social {
