--- a/covid/assets/style/about.scss
+++ b/covid/assets/style/about.scss
@@ -90,10 +90,10 @@ $color-text: #000;
             width: 795px;
 
             .list__link {
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 18px;
                 color: $color-text;
             }
@@ -133,8 +133,8 @@ $color-text: #000;
     .about-preview__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 40px;
-        line-height: 49px;
+        font-size: 30px;
+        line-height: 37px;
         color: #FFFFFF;
         text-align: center;
         text-transform: capitalize;
@@ -150,19 +150,21 @@ $color-text: #000;
         text-align: center;
     }
     .home-defenders__subtitle {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 15px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #000000;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
 
     .home-defenders__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-size: 24px;
         line-height: 37px;
         /* identical to box height */
         text-align: center;
@@ -171,9 +173,10 @@ $color-text: #000;
     }
 
     .home-defenders__description {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
         text-align: center;
         color: $color-text;
@@ -183,10 +186,10 @@ $color-text: #000;
         border: none;
         background: #6CD3AE;
         border-radius: 10px;
-        padding: 21px;
+        padding: 16px 21px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #fff;
         cursor: pointer;
@@ -214,20 +217,25 @@ $color-text: #000;
     }
 
     .get-started__subtitle {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 15px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 18px;
         color: #000000;
+        margin-bottom: 20px;
+        text-transform: uppercase;
     }
 
     .get-started__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
         font-weight: bold;
-        font-size: 30px;
+        font-size: 26px;
         line-height: 37px;
         color: #000000;
         margin-top: 30px;
+        margin-bottom: 15px;
 
         span {
             color: #6CD3AE;
@@ -236,11 +244,10 @@ $color-text: #000;
 
     .get-started__text {
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 24px;
-        color: #000000;
-        margin-top: 25px;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 24px;
+            color: #000000;
     }
 
     .get-started__information {
@@ -248,9 +255,10 @@ $color-text: #000;
     }
 
     .information__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: bold;
-        font-size: 15px;
+        font-weight: 600;
+        font-size: 18px;
         line-height: 18px;
         color: #000000;
         margin-bottom: 20px;
@@ -262,22 +270,30 @@ $color-text: #000;
         img {
             margin-right: 19px;
         }
+        p {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 24px;
+            color: #000000;
+        }
         margin-bottom: 11px;
     }
 
     .call-now {
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         text-transform: capitalize;
         border: none;
-        padding: 21px 51px;
+        padding: 16px 51px;
         background: #6CD3AE;
         border-radius: 10px;
         cursor: pointer;
         transition: .3s;
+        margin-top: 15px;
 
         &:hover {
             background: #4C957A;
@@ -299,7 +315,7 @@ $color-text: #000;
     .form-consultation__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 24px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -309,7 +325,7 @@ $color-text: #000;
     .form-consultation__subtitle  {
         font-style: normal;
         font-weight: 500;
-        font-size: 25px;
+        font-size: 22px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -318,7 +334,7 @@ $color-text: #000;
     .form-consultation__description {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #E3E1E1;
@@ -338,7 +354,7 @@ $color-text: #000;
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -369,7 +385,7 @@ $color-text: #000;
         padding: 16px 12px 12px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         -webkit-appearance: none;
@@ -387,7 +403,7 @@ $color-text: #000;
 
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
 
@@ -395,11 +411,24 @@ $color-text: #000;
 }
 
 .footer {
-    padding: 20px 0;
+
+    padding: 100px 0 20px;
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        height: 1px;
+        background: #4C957A;
+        top: 101px;
+        left: 0;
+    }
 
     .logo {
         max-width: 134px;
     }
+
     .block-logo{
         margin-top: 18px;
         display: flex;
@@ -409,44 +438,12 @@ $color-text: #000;
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
-        /* identical to box height */
-
-
-color: #000000;
-    }
-    .footer__register {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom:62px ;
-        border-bottom: 2px solid #4C957A;
-        .input__join {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 24px;
-            padding: 20px;
-            color: rgba(88, 88, 88, 0.7);
-            border: none;
-            background: rgba(196, 196, 196, 0.7);
-            border-radius: 10px;
-            width: 407px;
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(88, 88, 88, 0.7);
-                
-            }
-        }
+        color: #000000;
     }
     .footer__menu {
         display: flex;
         justify-content: space-between;
         position: relative;
-        border-top: 2px solid #4C957A;
         padding-top: 34px;
 
         form {
@@ -961,7 +958,9 @@ color: #000000;
     .footer {
         padding: 30px 0;
         
-
+        &::after {
+            top: 30px;
+        }
         
         .social {
             order: 4;
