--- a/covid/assets/style/contact.scss
+++ b/covid/assets/style/contact.scss
@@ -91,10 +91,9 @@ $color-text: #000;
             width: 795px;
 
             .list__link {
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-style: normal;
-                font-weight: 500;
-                font-size: 15px;
+                font-size: 14px; 
                 line-height: 18px;
                 color: $color-text;
             }
@@ -149,24 +148,25 @@ $color-text: #000;
     .contact-preview__subtitle {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         color: #FFFFFF;
+        text-transform: uppercase;
     }
 
     .contact-preview__title {
         font-style: normal;
-        font-weight: bold;
-        font-size: 40px;
-        line-height: 49px;
-        color: #FFFFFF;
-        margin-top: 30px;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 34px;
+            color: #FFFFFF;
+            margin-bottom: 15px;
     }
 
     .contact-preview__text {
         font-style: normal;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         margin-top: 25px;
@@ -179,7 +179,7 @@ $color-text: #000;
         padding: 21px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #fff;
         cursor: pointer;
@@ -204,7 +204,7 @@ $color-text: #000;
     .form-consultation__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 24px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -214,7 +214,7 @@ $color-text: #000;
     .form-consultation__subtitle  {
         font-style: normal;
         font-weight: 500;
-        font-size: 25px;
+        font-size: 22px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -223,7 +223,7 @@ $color-text: #000;
     .form-consultation__description {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #E3E1E1;
@@ -243,7 +243,7 @@ $color-text: #000;
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -272,7 +272,7 @@ $color-text: #000;
         padding: 16px 12px 12px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
 
@@ -291,7 +291,7 @@ $color-text: #000;
 
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         transition: .3s;
@@ -307,9 +307,10 @@ $color-text: #000;
     padding: 50px 0;
 
     .defense__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-size: 24px;
         line-height: 37px;
         /* identical to box height */
         text-align: center;
@@ -318,9 +319,10 @@ $color-text: #000;
     }
 
     .defense__description {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
         text-align: center;
         color: $color-text;
@@ -346,7 +348,7 @@ $color-text: #000;
     .stop-waiting__subtitle {
         font-style: normal;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         color: #000000;
         text-transform: uppercase;
@@ -355,7 +357,7 @@ $color-text: #000;
     .stop-waiting__title {
         font-style: normal;
         font-weight: normal;
-        font-size: 30px;
+        font-size: 24px;
         line-height: 37px;
         color: #000000;
         text-transform: uppercase;
@@ -368,10 +370,12 @@ $color-text: #000;
     }
 
     p {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
+        color: $color-text;
 
         color: #000000;
         span {
@@ -396,13 +400,13 @@ $color-text: #000;
         .contact-us {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 18px;
             line-height: 24px;
             color: #FFFFFF;
             background: #6CD3AE;
             border-radius: 10px;
             border: none;
-            padding: 21px 41px;
+            padding: 18px 41px;
             cursor: pointer;
             transition: .3s;
             &:hover {
@@ -435,14 +439,14 @@ $color-text: #000;
                 margin-bottom: 34px;
                 font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     text-transform: uppercase;
                     color: rgba(129, 129, 129, 0.7);
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     text-transform: uppercase;
                     color: rgba(129, 129, 129, 0.7);
@@ -460,7 +464,7 @@ $color-text: #000;
                 margin-bottom: 34px;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 text-transform: uppercase;
                 color: rgba(129, 129, 129, 0.7);
@@ -480,7 +484,7 @@ $color-text: #000;
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     text-transform: uppercase;
                     color: rgba(129, 129, 129, 0.7);
@@ -491,7 +495,7 @@ $color-text: #000;
                 margin-top: 34px;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                font-size: 18px;
                 line-height: 24px;
                 color: #FFFFFF;
                 padding: 21px 43px;
@@ -512,11 +516,24 @@ $color-text: #000;
 }
 
 .footer {
-    padding: 20px 0;
+
+    padding: 100px 0 20px;
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        height: 1px;
+        background: #4C957A;
+        top: 101px;
+        left: 0;
+    }
 
     .logo {
         max-width: 134px;
     }
+
     .block-logo{
         margin-top: 18px;
         display: flex;
@@ -526,44 +543,12 @@ $color-text: #000;
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
-        /* identical to box height */
-
-
-color: #000000;
-    }
-    .footer__register {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom:62px ;
-        border-bottom: 2px solid #4C957A;
-        .input__join {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 24px;
-            padding: 20px;
-            color: rgba(88, 88, 88, 0.7);
-            border: none;
-            background: rgba(196, 196, 196, 0.7);
-            border-radius: 10px;
-            width: 407px;
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(88, 88, 88, 0.7);
-                
-            }
-        }
+        color: #000000;
     }
     .footer__menu {
         display: flex;
         justify-content: space-between;
         position: relative;
-        border-top: 2px solid #4C957A;
         padding-top: 34px;
 
         form {
@@ -701,7 +686,6 @@ color: #000000;
         }
     }
 }
-
 
 @media (min-width: 768px) and (max-width: 1280px) {
 
@@ -1170,7 +1154,9 @@ color: #000000;
     .footer {
         padding: 30px 0;
         
-
+        &::after {
+            top: 30px;
+        }
         
         .social {
             order: 4;
