--- a/covid/assets/style/foreclasure.scss
+++ b/covid/assets/style/foreclasure.scss
@@ -94,10 +94,10 @@ $color-text: #000;
             width: 795px;
 
             .list__link {
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 18px;
                 color: $color-text;
             }
@@ -150,9 +150,10 @@ $color-text: #000;
     }
 
     .foreclosure-preview__subtitle {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: 500;
-        font-size: 15px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 18px;
         color: #FFFFFF;
     }
@@ -160,16 +161,17 @@ $color-text: #000;
     .foreclosure-preview__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 40px;
-        line-height: 49px;
+        font-size: 30px;
+        line-height: 35px;
         color: #FFFFFF;
         margin-top: 30px;
     }
 
     .foreclosure-preview__text {
+        font-family: 'Nunito', sans-serif;
         font-style: normal;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         margin-top: 25px;
@@ -189,7 +191,7 @@ $color-text: #000;
     .form-consultation__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 24px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -199,7 +201,7 @@ $color-text: #000;
     .form-consultation__subtitle  {
         font-style: normal;
         font-weight: 500;
-        font-size: 25px;
+        font-size: 22px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -208,7 +210,7 @@ $color-text: #000;
     .form-consultation__description {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #E3E1E1;
@@ -228,7 +230,7 @@ $color-text: #000;
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -249,6 +251,7 @@ $color-text: #000;
     }
 
     .form__list {
+        
         background: #FFFFFF;
         box-sizing: border-box;
         border-radius: 10px;
@@ -256,7 +259,7 @@ $color-text: #000;
         padding: 16px 12px 12px !important;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
@@ -267,6 +270,7 @@ $color-text: #000;
     }
 
     .form-consultation__button {
+        font-family: 'Nunito', sans-serif;
         background: #76ECC1;
         border-radius: 10px;
         padding: 21px 140px;
@@ -275,7 +279,7 @@ $color-text: #000;
         cursor:pointer;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
 
@@ -292,9 +296,10 @@ $color-text: #000;
     padding: 50px 0;
 
     .second-block__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-size: 24px;
         line-height: 37px;
         /* identical to box height */
         text-align: center;
@@ -303,9 +308,10 @@ $color-text: #000;
     }
 
     .second-block__description {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
         text-align: center;
         color: $color-text;
@@ -319,17 +325,19 @@ $color-text: #000;
     .how-it-works__subtitle {
         font-style: normal;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #000000;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
     }
 
     .how-it-works__title {
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
         line-height: 37px;
         color: #000000;
         margin-bottom: 33px;
@@ -341,10 +349,10 @@ $color-text: #000;
         position: relative;
 
         .process__title{
-            font-style: normal;
+            font-family: 'Roboto', sans-serif;
             font-weight: bold;
-            font-size: 25px;
-            line-height: 30px;
+            font-size: 24px;
+            line-height: 27px;
             text-align: right;
             color: #000000;
         }
@@ -352,7 +360,8 @@ $color-text: #000;
         .process__description {
             font-style: normal;
             font-weight: normal;
-            font-size: 20px;
+            text-align: center;
+            font-size: 15px;
             line-height: 24px;
             text-align: right;
             color: #000000;
@@ -387,7 +396,7 @@ $color-text: #000;
             position: absolute;
             font-style: normal;
             font-weight: 500;
-            font-size: 35px;
+            font-size: 30px;
             line-height: 43px;
             color: #FFFFFF;
             padding: 20px 35px;
@@ -408,7 +417,7 @@ $color-text: #000;
             position: absolute;
             font-style: normal;
             font-weight: 500;
-            font-size: 35px;
+            font-size: 30px;
             line-height: 43px;
             color: #FFFFFF;
             padding: 20px 35px;
@@ -463,7 +472,7 @@ $color-text: #000;
                     position: absolute;
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 35px;
+                    font-size: 30px;
                     line-height: 43px;
                     color: #FFFFFF;
                     padding: 20px 32px;
@@ -494,9 +503,11 @@ $color-text: #000;
         text-align: center;
     }
     .consult__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 24px;
         line-height: 37px;
         text-align: center;
         color: #FFFFFF;
@@ -504,22 +515,26 @@ $color-text: #000;
     }
 
     .consult__description {
+        font-family: 'Nunito', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 18px;
         line-height: 24px;
         text-align: center;
         color: #FFFFFF;
         margin-bottom: 25px;
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .schedule-button {
         border: none;
         background: #6CD3AE;
         border-radius: 10px;
-        padding: 21px;
+        padding: 18px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 24px;
         color: #fff;
         cursor: pointer;
@@ -531,11 +546,24 @@ $color-text: #000;
 }
 
 .footer {
-    padding: 20px 0;
+
+    padding: 100px 0 20px;
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        height: 1px;
+        background: #4C957A;
+        top: 101px;
+        left: 0;
+    }
 
     .logo {
         max-width: 134px;
     }
+
     .block-logo{
         margin-top: 18px;
         display: flex;
@@ -545,44 +573,12 @@ $color-text: #000;
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
-        /* identical to box height */
-
-
-color: #000000;
-    }
-    .footer__register {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom:62px ;
-        border-bottom: 2px solid #4C957A;
-        .input__join {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 24px;
-            padding: 20px;
-            color: rgba(88, 88, 88, 0.7);
-            border: none;
-            background: rgba(196, 196, 196, 0.7);
-            border-radius: 10px;
-            width: 407px;
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(88, 88, 88, 0.7);
-                
-            }
-        }
+        color: #000000;
     }
     .footer__menu {
         display: flex;
         justify-content: space-between;
         position: relative;
-        border-top: 2px solid #4C957A;
         padding-top: 34px;
 
         form {
@@ -1169,7 +1165,9 @@ color: #000000;
 
     .footer {
         padding: 30px 0;
-        
+        &::after {
+            top: 30px;
+        }
 
         
         .social {
