--- a/covid/assets/style/index.css
+++ b/covid/assets/style/index.css
@@ -90,10 +90,9 @@ html {
   width: 795px;
 }
 .header .header__navigation .navigation__list .list__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 18px;
   color: #000;
 }
@@ -135,15 +134,15 @@ html {
 .preview .preview__content .preview__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 40px;
-  line-height: 49px;
+  font-size: 30px;
+  line-height: 34px;
   color: #FFFFFF;
   margin-bottom: 15px;
 }
 .preview .preview__content .preview__description {
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   margin-bottom: 30px;
@@ -155,7 +154,7 @@ html {
   padding: 21px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   cursor: pointer;
   color: #fff;
@@ -169,18 +168,20 @@ html {
   padding: 50px 0;
 }
 .home-defenders .home-defenders__subtitle {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #000000;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .home-defenders .home-defenders__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-size: 24px;
   line-height: 37px;
   /* identical to box height */
   text-align: center;
@@ -188,9 +189,10 @@ html {
   margin-bottom: 25px;
 }
 .home-defenders .home-defenders__description {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: #000;
@@ -203,19 +205,21 @@ html {
 .how-it-works .how-it-works__subtitle {
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #000000;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 .how-it-works .how-it-works__title {
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
   line-height: 37px;
   color: #000000;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   text-align: center;
 }
 .how-it-works .steps-help {
@@ -228,9 +232,10 @@ html {
   position: absolute;
   top: -23px;
   left: 25px;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   font-style: normal;
-  font-weight: 500;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -243,9 +248,10 @@ html {
   position: absolute;
   top: -23px;
   left: 25px;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -256,11 +262,12 @@ html {
 .how-it-works .steps-help .step:last-child .step__content::after {
   content: "Step 3";
   position: absolute;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   top: -23px;
   left: 25px;
+  font-family: "Nunito", sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -270,6 +277,7 @@ html {
 }
 .how-it-works .step {
   flex-basis: 30%;
+  background: #fff;
 }
 .how-it-works .step__img {
   max-height: 285px;
@@ -281,28 +289,29 @@ html {
   object-fit: cover;
 }
 .how-it-works .step__content {
-  background: #fff;
-  padding: 45px 30px;
-  border: 2px solid #4C957A;
+  padding: 30px 30px;
   position: relative;
-  min-height: 600px;
 }
 .how-it-works .step__content .step__title {
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 24px;
+  line-height: 27px;
+  margin-bottom: 10px;
+  text-align: center;
   color: #000000;
 }
 .how-it-works .step__content .step__description {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  text-align: center;
+  font-size: 15px;
   line-height: 24px;
   color: #000000;
 }
 
 .consult {
-  padding: 63px 0;
+  padding: 50px 0;
   background: url("../img/consult__bg.png") no-repeat;
   background-position: center;
 }
@@ -310,31 +319,37 @@ html {
   text-align: center;
 }
 .consult .consult__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 24px;
   line-height: 37px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
 }
 .consult .consult__description {
+  font-family: "Nunito", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .consult .schedule-button {
   border: none;
   background: #6CD3AE;
   border-radius: 10px;
-  padding: 21px;
+  padding: 18px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: #fff;
   cursor: pointer;
@@ -345,7 +360,17 @@ html {
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 100px 0 20px;
+  position: relative;
+}
+.footer::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background: #4C957A;
+  top: 101px;
+  left: 0;
 }
 .footer .logo {
   max-width: 134px;
@@ -359,40 +384,12 @@ html {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
   color: #000000;
-}
-.footer .footer__register {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 62px;
-  border-bottom: 2px solid #4C957A;
-}
-.footer .footer__register .input__join {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 20px;
-  color: rgba(88, 88, 88, 0.7);
-  border: none;
-  background: rgba(196, 196, 196, 0.7);
-  border-radius: 10px;
-  width: 407px;
-}
-.footer .footer__register .input__join::placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu {
   display: flex;
   justify-content: space-between;
   position: relative;
-  border-top: 2px solid #4C957A;
   padding-top: 34px;
 }
 .footer .footer__menu form {
@@ -514,11 +511,6 @@ html {
   z-index: -1;
 }
 
-@media (max-width: 1439px) {
-  .how-it-works .steps-help .step .step__content {
-    min-height: 360px;
-  }
-}
 @media (max-width: 1239px) {
   .how-it-works .steps-help {
     flex-wrap: wrap;
@@ -532,9 +524,6 @@ html {
   .how-it-works .steps-help .step:first-child {
     margin-right: 30px;
   }
-  .how-it-works .steps-help .step .step__content {
-    min-height: 310px;
-  }
   .how-it-works .steps-help .step .step__img {
     height: 350px;
   }
@@ -543,7 +532,6 @@ html {
   }
   .how-it-works .step__content {
     padding: 30px 10px;
-    min-height: 10px;
   }
   .how-it-works .step__content .step__title {
     font-size: 18px;
@@ -568,14 +556,6 @@ html {
   }
   .how-it-works .steps-help .step .step__img img {
     object-fit: fill;
-  }
-  .how-it-works .steps-help .step .step__content {
-    min-height: 360px;
-  }
-}
-@media (max-width: 850px) {
-  .how-it-works .steps-help .step .step__content {
-    min-height: 403px;
   }
 }
 @media (min-width: 768px) and (max-width: 1280px) {
@@ -622,7 +602,6 @@ html {
   }
   .how-it-works .step__content {
     padding: 30px 10px;
-    min-height: 10px;
   }
   .how-it-works .step__content .step__title {
     font-size: 18px;
@@ -845,7 +824,6 @@ html {
   }
   .how-it-works .how-it-works__content .steps-help .step .step__content {
     padding: 20px 5px;
-    min-height: 10px;
   }
   .how-it-works .how-it-works__content .steps-help .step .step__content .step__title {
     font-size: 18px;
@@ -876,6 +854,9 @@ html {
 
   .footer {
     padding: 30px 0;
+  }
+  .footer::after {
+    top: 30px;
   }
   .footer .social {
     order: 4;
