--- a/covid/assets/style/probate.scss
+++ b/covid/assets/style/probate.scss
@@ -91,10 +91,9 @@ $color-text: #000;
             width: 795px;
 
             .list__link {
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-style: normal;
-                font-weight: 500;
-                font-size: 15px;
+                font-size: 14px; 
                 line-height: 18px;
                 color: $color-text;
             }
@@ -157,8 +156,8 @@ $color-text: #000;
     .foreclosure-preview__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 40px;
-        line-height: 49px;
+        font-size: 30px;
+        line-height: 37px;
         color: #FFFFFF;
         margin-top: 30px;
     }
@@ -166,7 +165,7 @@ $color-text: #000;
     .foreclosure-preview__text {
         font-style: normal;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
         margin-top: 25px;
@@ -186,7 +185,7 @@ $color-text: #000;
     .form-consultation__title {
         font-style: normal;
         font-weight: bold;
-        font-size: 25px;
+        font-size: 24px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -196,7 +195,7 @@ $color-text: #000;
     .form-consultation__subtitle  {
         font-style: normal;
         font-weight: 500;
-        font-size: 25px;
+        font-size: 22px;
         line-height: 30px;
         text-align: center;
         color: #FFFFFF;
@@ -205,7 +204,7 @@ $color-text: #000;
     .form-consultation__description {
         font-style: normal;
         font-weight: 500;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #E3E1E1;
@@ -225,7 +224,7 @@ $color-text: #000;
         &::placeholder {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 14px;
             line-height: 24px;
             color: rgba(129, 129, 129, 0.7);
             text-transform: capitalize;
@@ -257,7 +256,7 @@ $color-text: #000;
         padding: 16px 12px 12px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 14px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
@@ -276,7 +275,7 @@ $color-text: #000;
         cursor:pointer;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 24px;
         color: #FFFFFF;
 
@@ -293,9 +292,10 @@ $color-text: #000;
     padding: 50px 0;
 
     .second-block__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-size: 24px;
         line-height: 37px;
         /* identical to box height */
         text-align: center;
@@ -304,9 +304,10 @@ $color-text: #000;
     }
 
     .second-block__description {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 16px;
         line-height: 24px;
         text-align: center;
         color: $color-text;
@@ -320,17 +321,19 @@ $color-text: #000;
     .how-it-works__subtitle {
         font-style: normal;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 18px;
         text-align: center;
         color: #000000;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        text-transform: uppercase;
     }
 
     .how-it-works__title {
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
         line-height: 37px;
         color: #000000;
         margin-bottom: 33px;
@@ -338,14 +341,14 @@ $color-text: #000;
     }
 
     .process {
-        max-width: 578px;
+        max-width: 522px;
         position: relative;
 
         .process__title{
-            font-style: normal;
+            font-family: 'Roboto', sans-serif;
             font-weight: bold;
-            font-size: 25px;
-            line-height: 30px;
+            font-size: 24px;
+            line-height: 27px;
             text-align: right;
             color: #000000;
         }
@@ -353,7 +356,8 @@ $color-text: #000;
         .process__description {
             font-style: normal;
             font-weight: normal;
-            font-size: 20px;
+            text-align: center;
+            font-size: 15px;
             line-height: 24px;
             text-align: right;
             color: #000000;
@@ -373,7 +377,7 @@ $color-text: #000;
             background-position: top left;
             position: absolute;
             top: 0;
-            left: 49%;
+            left: 47%;
             transform: translateX(-50%);
             z-index: -10;
         }
@@ -388,13 +392,13 @@ $color-text: #000;
             position: absolute;
             font-style: normal;
             font-weight: 500;
-            font-size: 35px;
+            font-size: 30px;
             line-height: 43px;
             color: #FFFFFF;
             padding: 20px 35px;
             box-sizing: border-box;
             top: 0;
-            right: -15%;
+            right: -23%;
             z-index: -1;
 
         }
@@ -409,13 +413,13 @@ $color-text: #000;
             position: absolute;
             font-style: normal;
             font-weight: 500;
-            font-size: 35px;
+            font-size: 30px;
             line-height: 43px;
             color: #FFFFFF;
             padding: 20px 35px;
             box-sizing: border-box;
             top: 0;
-            right: -15%;
+            right: -23%;
             z-index: -1;
         }
         .process:nth-child(2) {
@@ -464,13 +468,13 @@ $color-text: #000;
                     position: absolute;
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 35px;
+                    font-size: 30px;
                     line-height: 43px;
                     color: #FFFFFF;
                     padding: 20px 32px;
                     box-sizing: border-box;
                     top: 0;
-                    left: -14%;
+                    left: -18%;
                     z-index: -1;
                 }
 
@@ -488,16 +492,18 @@ $color-text: #000;
 }
 
 .consult {
-    padding: 63px 0;
+    padding: 50px 0;
     background: url('../img/consult__bg.png') no-repeat;
     background-position: center;
     .consult__content {
         text-align: center;
     }
     .consult__title {
+        font-family: 'Roboto', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 24px;
         line-height: 37px;
         text-align: center;
         color: #FFFFFF;
@@ -505,38 +511,56 @@ $color-text: #000;
     }
 
     .consult__description {
+        font-family: 'Nunito', sans-serif;
         font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
+        font-weight: 300;
+        font-size: 18px;
         line-height: 24px;
         text-align: center;
         color: #FFFFFF;
         margin-bottom: 25px;
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .schedule-button {
         border: none;
         background: #6CD3AE;
         border-radius: 10px;
-        padding: 21px;
+        padding: 18px;
         font-style: normal;
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 24px;
         color: #fff;
         cursor: pointer;
         transition: all .3s;
-            &:hover {
-                background: #4C957A;
-            }
+
+        &:hover {
+            background: #4C957A;
+        }
     }
 }
 
 .footer {
-    padding: 20px 0;
+
+    padding: 100px 0 20px;
+    position: relative;
+
+    &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        height: 1px;
+        background: #4C957A;
+        top: 101px;
+        left: 0;
+    }
 
     .logo {
         max-width: 134px;
     }
+
     .block-logo{
         margin-top: 18px;
         display: flex;
@@ -546,44 +570,12 @@ $color-text: #000;
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
-        /* identical to box height */
-
-
-color: #000000;
-    }
-    .footer__register {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom:62px ;
-        border-bottom: 2px solid #4C957A;
-        .input__join {
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 24px;
-            padding: 20px;
-            color: rgba(88, 88, 88, 0.7);
-            border: none;
-            background: rgba(196, 196, 196, 0.7);
-            border-radius: 10px;
-            width: 407px;
-
-            &::placeholder {
-                font-style: normal;
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 24px;
-                color: rgba(88, 88, 88, 0.7);
-                
-            }
-        }
+        color: #000000;
     }
     .footer__menu {
         display: flex;
         justify-content: space-between;
         position: relative;
-        border-top: 2px solid #4C957A;
         padding-top: 34px;
 
         form {
@@ -1168,7 +1160,9 @@ color: #000000;
     .footer {
         padding: 30px 0;
         
-
+        &::after {
+            top: 30px;
+        }
         
         .social {
             order: 4;
