--- a/covid/assets/style/shortSale.css
+++ b/covid/assets/style/shortSale.css
@@ -89,10 +89,9 @@ html {
   width: 795px;
 }
 .header .header__navigation .navigation__list .list__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 18px;
   color: #000;
 }
@@ -145,15 +144,15 @@ html {
 .foreclosure-preview .foreclosure-preview__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 40px;
-  line-height: 49px;
+  font-size: 28px;
+  line-height: 37px;
   color: #FFFFFF;
   margin-top: 30px;
 }
 .foreclosure-preview .foreclosure-preview__text {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   margin-top: 25px;
@@ -171,7 +170,7 @@ html {
 .foreclosure-preview .form-consultation__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 24px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -187,7 +186,7 @@ html {
 .foreclosure-preview .form-consultation__subtitle {
   font-style: normal;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 22px;
   line-height: 30px;
   text-align: center;
   color: #FFFFFF;
@@ -195,7 +194,7 @@ html {
 .foreclosure-preview .form-consultation__description {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #E3E1E1;
@@ -214,7 +213,7 @@ html {
 .foreclosure-preview .form-consultation__input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
@@ -228,7 +227,7 @@ html {
   padding: 16px 12px 12px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   position: relative;
@@ -259,7 +258,7 @@ html {
   cursor: pointer;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
   transition: all 0.3s;
@@ -277,7 +276,7 @@ html {
   padding: 16px 12px 12px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
   resize: none;
@@ -285,7 +284,7 @@ html {
 .foreclosure-preview .message::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
@@ -294,19 +293,11 @@ html {
 .home-defenders {
   padding: 50px 0;
 }
-.home-defenders .home-defenders__subtitle {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #000000;
-  margin-bottom: 30px;
-}
 .home-defenders .home-defenders__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-size: 24px;
   line-height: 37px;
   /* identical to box height */
   text-align: center;
@@ -314,9 +305,10 @@ html {
   margin-bottom: 25px;
 }
 .home-defenders .home-defenders__description {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: #000;
@@ -329,19 +321,21 @@ html {
 .how-it-works .how-it-works__subtitle {
   font-style: normal;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #000000;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 .how-it-works .how-it-works__title {
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
   line-height: 37px;
   color: #000000;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   text-align: center;
 }
 .how-it-works .steps-help {
@@ -354,9 +348,9 @@ html {
   position: absolute;
   top: -23px;
   left: 25px;
-  border: 5px solid #fff;
-  font-style: normal;
-  font-weight: 500;
+  border: 3px solid #fff;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -369,9 +363,9 @@ html {
   position: absolute;
   top: -23px;
   left: 25px;
-  border: 5px solid #fff;
-  font-style: normal;
-  font-weight: 500;
+  border: 3px solid #fff;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -382,11 +376,11 @@ html {
 .how-it-works .steps-help .step:last-child .step__content::after {
   content: "Step 3";
   position: absolute;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   top: -23px;
   left: 25px;
-  font-style: normal;
-  font-weight: 500;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
@@ -396,6 +390,7 @@ html {
 }
 .how-it-works .step {
   flex-basis: 30%;
+  background: #fff;
 }
 .how-it-works .step__img {
   max-height: 285px;
@@ -407,27 +402,29 @@ html {
   object-fit: cover;
 }
 .how-it-works .step__content {
-  background: #fff;
-  padding: 45px 30px;
+  padding: 30px;
   position: relative;
-  min-height: 635px;
 }
 .how-it-works .step__content .step__title {
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 24px;
+  line-height: 27px;
+  margin-bottom: 10px;
+  text-align: center;
   color: #000000;
 }
 .how-it-works .step__content .step__description {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  text-align: center;
+  font-size: 15px;
   line-height: 24px;
   color: #000000;
 }
 
 .consult {
-  padding: 63px 0;
+  padding: 50px 0;
   background: url("../img/consult__bg.png") no-repeat;
   background-position: center;
 }
@@ -435,31 +432,37 @@ html {
   text-align: center;
 }
 .consult .consult__title {
+  font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 24px;
   line-height: 37px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
 }
 .consult .consult__description {
+  font-family: "Nunito", sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
+  font-weight: 300;
+  font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #FFFFFF;
   margin-bottom: 25px;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .consult .schedule-button {
   border: none;
   background: #6CD3AE;
   border-radius: 10px;
-  padding: 21px;
+  padding: 18px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
   color: #fff;
   cursor: pointer;
@@ -470,7 +473,17 @@ html {
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 100px 0 20px;
+  position: relative;
+}
+.footer::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  height: 1px;
+  background: #4C957A;
+  top: 101px;
+  left: 0;
 }
 .footer .logo {
   max-width: 134px;
@@ -484,40 +497,12 @@ html {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  /* identical to box height */
   color: #000000;
-}
-.footer .footer__register {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 62px;
-  border-bottom: 2px solid #4C957A;
-}
-.footer .footer__register .input__join {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  padding: 20px;
-  color: rgba(88, 88, 88, 0.7);
-  border: none;
-  background: rgba(196, 196, 196, 0.7);
-  border-radius: 10px;
-  width: 407px;
-}
-.footer .footer__register .input__join::placeholder {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu {
   display: flex;
   justify-content: space-between;
   position: relative;
-  border-top: 2px solid #4C957A;
   padding-top: 34px;
 }
 .footer .footer__menu form {
@@ -639,11 +624,6 @@ html {
   z-index: -1;
 }
 
-@media (max-width: 1300px) {
-  .how-it-works .steps-help .step .step__content {
-    min-height: 432px;
-  }
-}
 @media (max-width: 1239px) {
   .how-it-works .steps-help {
     flex-wrap: wrap;
@@ -657,9 +637,6 @@ html {
   .how-it-works .steps-help .step:first-child {
     margin-right: 30px;
   }
-  .how-it-works .steps-help .step .step__content {
-    min-height: 355px;
-  }
   .how-it-works .steps-help .step .step__img {
     height: 350px;
   }
@@ -668,7 +645,6 @@ html {
   }
   .how-it-works .step__content {
     padding: 30px 10px;
-    min-height: 10px;
   }
   .how-it-works .step__content .step__title {
     font-size: 18px;
@@ -693,14 +669,6 @@ html {
   }
   .how-it-works .steps-help .step .step__img img {
     object-fit: fill;
-  }
-  .how-it-works .steps-help .step .step__content {
-    min-height: 432px;
-  }
-}
-@media (max-width: 850px) {
-  .how-it-works .steps-help .step .step__content {
-    min-height: 455px;
   }
 }
 @media (min-width: 768px) and (max-width: 1280px) {
@@ -788,7 +756,6 @@ html {
   }
   .how-it-works .step__content {
     padding: 30px 10px;
-    min-height: 10px;
   }
   .how-it-works .step__content .step__title {
     font-size: 18px;
@@ -1063,7 +1030,6 @@ html {
   }
   .how-it-works .how-it-works__content .steps-help .step .step__content {
     padding: 20px 5px;
-    min-height: 10px;
   }
   .how-it-works .how-it-works__content .steps-help .step .step__content .step__title {
     font-size: 18px;
@@ -1078,6 +1044,9 @@ html {
 
   .footer {
     padding: 30px 0;
+  }
+  .footer::after {
+    top: 30px;
   }
   .footer .social {
     order: 4;
